May have found a solution

--- a/main.ipynb
+++ b/main.ipynb
@@ -736,33 +736,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3426dd16",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Schedule ID 1000001: VALID (has Property Desc)\n",
-      "Schedule ID 1000002: Table found but no Property Desc\n",
-      "Schedule ID 1000003: VALID (has Property Desc)\n",
-      "Schedule ID 1000004: VALID (has Property Desc)\n",
-      "Schedule ID 1000005: VALID (has Property Desc)\n",
-      "Schedule ID 1000006: VALID (has Property Desc)\n",
-      "Schedule ID 1000007: VALID (has Property Desc)\n",
-      "Schedule ID 1000008: VALID (has Property Desc)\n",
-      "Schedule ID 1000009: VALID (has Property Desc)\n",
-      "Schedule ID 1000010: VALID (has Property Desc)\n",
-      "Schedule ID 1000011: VALID (has Property Desc)\n",
-      "Schedule ID 1000012: VALID (has Property Desc)\n",
-      "Schedule ID 1000013: VALID (has Property Desc)\n",
-      "Schedule ID 1000014: VALID (has Property Desc)\n",
-      "Schedule ID 1000015: VALID (has Property Desc)\n",
-      "Schedule ID 1000016: VALID (has Property Desc)\n",
-      "Schedule ID 1000017: Table found but no Property Desc\n"
-     ]
-    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -770,8 +747,8 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 73\u001b[39m\n\u001b[32m     70\u001b[39m       time.sleep(\u001b[32m0.5\u001b[39m)  \u001b[38;5;66;03m# Be nice to their server\u001b[39;00m\n\u001b[32m     72\u001b[39m \u001b[38;5;66;03m# Usage\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m73\u001b[39m \u001b[43mverify_range\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 70\u001b[39m, in \u001b[36mverify_range\u001b[39m\u001b[34m(start_range, end_range)\u001b[39m\n\u001b[32m     67\u001b[39m     save_to_csv(final_message)\n\u001b[32m     68\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m70\u001b[39m \u001b[43mtime\u001b[49m\u001b[43m.\u001b[49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 74\u001b[39m\n\u001b[32m     71\u001b[39m           time.sleep(\u001b[32m20\u001b[39m)\n\u001b[32m     73\u001b[39m \u001b[38;5;66;03m# Usage\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m \u001b[43mverify_range\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 71\u001b[39m, in \u001b[36mverify_range\u001b[39m\u001b[34m(start_range, end_range)\u001b[39m\n\u001b[32m     69\u001b[39m \u001b[38;5;66;03m# Wait 20 seconds every 100 iterations\u001b[39;00m\n\u001b[32m     70\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m iteration_count % \u001b[32m500\u001b[39m == \u001b[32m0\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m71\u001b[39m     \u001b[43mtime\u001b[49m\u001b[43m.\u001b[49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m20\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
@@ -846,11 +823,64 @@
     "      time.sleep(0.5)  # Be nice to their server\n",
     "      \n",
     "      # Wait 20 seconds every 100 iterations\n",
-    "      if iteration_count % 100 == 0:\n",
+    "      if iteration_count % 500 == 0:\n",
     "          time.sleep(20)\n",
     "\n",
     "# Usage\n",
     "verify_range()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50064b70",
+   "metadata": {},
+   "source": [
+    "# Getting Most Recent Data Directly From the Server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "14ab60e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Five Most Recently Modified Parcels:\n",
+      "Parcel ID: 367, PPI: 1697-3440-00-014, Last Modified: 2025-05-26 18:00:00\n",
+      "Parcel ID: 714, PPI: 1951-0610-00-016, Last Modified: 2025-05-26 18:00:00\n",
+      "Parcel ID: 728, PPI: 1951-0610-00-011, Last Modified: 2025-05-26 18:00:00\n",
+      "Parcel ID: 731, PPI: 1951-0630-00-008, Last Modified: 2025-05-26 18:00:00\n",
+      "Parcel ID: 11034, PPI: 2097-3540-00-078, Last Modified: 2025-05-26 18:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Query URL for the 5 most recent parcels\n",
+    "query_url = \"https://gis.summitcountyco.gov/arcgis/rest/services/ParcelQueryTool/SummitMap1_Pro321/MapServer/19/query?where=1=1&orderByFields=MODDATE%20DESC&resultRecordCount=5&outFields=*&returnGeometry=false&f=json\"\n",
+    "\n",
+    "# Send the request\n",
+    "response = requests.get(query_url)\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()\n",
+    "    features = data.get(\"features\", [])\n",
+    "    print(\"Five Most Recently Modified Parcels:\")\n",
+    "    for feature in features:\n",
+    "        attributes = feature.get(\"attributes\", {})\n",
+    "        object_id = attributes.get(\"OBJECTID\")\n",
+    "        ppi = attributes.get(\"PPI\")\n",
+    "        mod_date = attributes.get(\"MODDATE\")\n",
+    "        # Convert MODDATE (Unix timestamp in milliseconds) to readable date\n",
+    "        if mod_date:\n",
+    "            mod_date = datetime.fromtimestamp(mod_date / 1000).strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "        print(f\"Parcel ID: {object_id}, PPI: {ppi}, Last Modified: {mod_date}\")\n",
+    "else:\n",
+    "    print(f\"Error: Unable to fetch data. Status code: {response.status_code}\")"
    ]
   }
  ],
