New query attempts

--- a/main.ipynb
+++ b/main.ipynb
@@ -835,12 +835,12 @@
    "id": "50064b70",
    "metadata": {},
    "source": [
-    "# Getting Most Recent Data Directly From the Server"
+    "# Fresh Start: Getting Most Recent Data Directly From the Server"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "14ab60e9",
    "metadata": {},
    "outputs": [
@@ -848,12 +848,508 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Five Most Recently Modified Parcels:\n",
-      "Parcel ID: 367, PPI: 1697-3440-00-014, Last Modified: 2025-05-26 18:00:00\n",
-      "Parcel ID: 714, PPI: 1951-0610-00-016, Last Modified: 2025-05-26 18:00:00\n",
-      "Parcel ID: 728, PPI: 1951-0610-00-011, Last Modified: 2025-05-26 18:00:00\n",
-      "Parcel ID: 731, PPI: 1951-0630-00-008, Last Modified: 2025-05-26 18:00:00\n",
-      "Parcel ID: 11034, PPI: 2097-3540-00-078, Last Modified: 2025-05-26 18:00:00\n"
+      "100 Most Recently Modified Parcels:\n",
+      "\n",
+      "Object ID: 367\n",
+      "PPI: 1697-3440-00-014\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 714\n",
+      "PPI: 1951-0610-00-016\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 728\n",
+      "PPI: 1951-0610-00-011\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 0\n",
+      "\n",
+      "Object ID: 731\n",
+      "PPI: 1951-0630-00-008\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 11034\n",
+      "PPI: 2097-3540-00-078\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 11129\n",
+      "PPI: 2093-3540-00-037\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 11212\n",
+      "PPI: 2097-3540-00-074\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 11242\n",
+      "PPI: 2097-3540-00-074\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 16102\n",
+      "PPI: 2211-3143-10-009\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 17902\n",
+      "PPI: 9999-9999-00-049\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 19860\n",
+      "PPI: 2375-1310-00-001\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 19921\n",
+      "PPI: 2375-1310-00-001\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 19989\n",
+      "PPI: 2375-1310-00-001\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 21214\n",
+      "PPI: 2483-1010-00-001\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 21233\n",
+      "PPI: 2483-1120-00-003\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 32975\n",
+      "PPI: 2097-3540-00-078\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 120954\n",
+      "PPI: 2211-3330-00-064\n",
+      "MOD Date: 2025-05-26 18:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 4425\n",
+      "PPI: 2097-2410-00-006\n",
+      "MOD Date: 2025-05-04 18:00:00\n",
+      "MOD Type: 0\n",
+      "\n",
+      "Object ID: 4535\n",
+      "PPI: 2095-0840-00-007\n",
+      "MOD Date: 2025-05-04 18:00:00\n",
+      "MOD Type: 0\n",
+      "\n",
+      "Object ID: 4757\n",
+      "PPI: 2097-2410-00-006\n",
+      "MOD Date: 2025-05-04 18:00:00\n",
+      "MOD Type: 0\n",
+      "\n",
+      "Object ID: 5210\n",
+      "PPI: 2097-2410-00-006\n",
+      "MOD Date: 2025-05-04 18:00:00\n",
+      "MOD Type: 0\n",
+      "\n",
+      "Object ID: 6173\n",
+      "PPI: 2095-2120-00-015\n",
+      "MOD Date: 2025-05-04 18:00:00\n",
+      "MOD Type: 0\n",
+      "\n",
+      "Object ID: 6202\n",
+      "PPI: 2095-2120-00-015\n",
+      "MOD Date: 2025-05-04 18:00:00\n",
+      "MOD Type: 0\n",
+      "\n",
+      "Object ID: 6323\n",
+      "PPI: 2095-2120-00-015\n",
+      "MOD Date: 2025-05-04 18:00:00\n",
+      "MOD Type: 0\n",
+      "\n",
+      "Object ID: 4406\n",
+      "PPI: 2095-0740-02-035\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 3\n",
+      "\n",
+      "Object ID: 118283\n",
+      "PPI: 2211-1820-36-067\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 120923\n",
+      "PPI: 2211-1820-36-069\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 120924\n",
+      "PPI: 2211-1820-36-046\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 120936\n",
+      "PPI: 2211-1820-36-045\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 120962\n",
+      "PPI: 2211-1820-36-060\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 120963\n",
+      "PPI: 2211-1820-36-062\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 120964\n",
+      "PPI: 2211-1820-36-064\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 120965\n",
+      "PPI: 2211-1820-36-052\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121992\n",
+      "PPI: 2211-1820-36-066\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121994\n",
+      "PPI: 2211-1820-36-068\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121996\n",
+      "PPI: 2211-1820-36-061\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121998\n",
+      "PPI: 2211-1820-36-063\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 122000\n",
+      "PPI: 2211-1820-36-065\n",
+      "MOD Date: 2025-03-17 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121989\n",
+      "PPI: 2097-0210-21-282\n",
+      "MOD Date: 2025-02-19 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 121991\n",
+      "PPI: 2097-0210-21-281\n",
+      "MOD Date: 2025-02-19 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 10841\n",
+      "PPI: 2097-3540-13-001\n",
+      "MOD Date: 2025-01-27 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 10842\n",
+      "PPI: 2097-3540-13-004\n",
+      "MOD Date: 2025-01-27 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121982\n",
+      "PPI: 2097-3540-13-002\n",
+      "MOD Date: 2025-01-27 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121983\n",
+      "PPI: 2097-3540-13-003\n",
+      "MOD Date: 2025-01-27 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121985\n",
+      "PPI: 2097-3540-13-005\n",
+      "MOD Date: 2025-01-27 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 713\n",
+      "PPI: 1951-0610-00-023\n",
+      "MOD Date: 2024-12-10 17:00:00\n",
+      "MOD Type: 4\n",
+      "\n",
+      "Object ID: 121978\n",
+      "PPI: 2373-0120-07-007\n",
+      "MOD Date: 2024-11-13 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121979\n",
+      "PPI: 2373-0120-07-008\n",
+      "MOD Date: 2024-11-13 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 19843\n",
+      "PPI: 2371-1910-01-057\n",
+      "MOD Date: 2024-11-11 17:00:00\n",
+      "MOD Type: 3\n",
+      "\n",
+      "Object ID: 20518\n",
+      "PPI: 2371-3130-13-025\n",
+      "MOD Date: 2024-11-11 17:00:00\n",
+      "MOD Type: 3\n",
+      "\n",
+      "Object ID: 2145\n",
+      "PPI: 2097-0120-02-002\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 6\n",
+      "\n",
+      "Object ID: 26851\n",
+      "PPI: 1951-2620-01-004\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 116631\n",
+      "PPI: 1951-2620-01-006\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 120960\n",
+      "PPI: 2371-0420-01-040\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121969\n",
+      "PPI: 1951-2620-01-005\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 121970\n",
+      "PPI: 2371-0420-01-039\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121971\n",
+      "PPI: 2371-0420-01-038\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121972\n",
+      "PPI: 2371-0420-01-037\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121973\n",
+      "PPI: 2371-0420-01-036\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121974\n",
+      "PPI: 2371-0420-01-034\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121977\n",
+      "PPI: 2097-0210-01-018\n",
+      "MOD Date: 2024-11-06 17:00:00\n",
+      "MOD Type: 6\n",
+      "\n",
+      "Object ID: 10883\n",
+      "PPI: 2097-3530-04-007\n",
+      "MOD Date: 2024-11-05 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121963\n",
+      "PPI: 2097-3530-04-009\n",
+      "MOD Date: 2024-11-05 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121964\n",
+      "PPI: 2097-3530-04-006\n",
+      "MOD Date: 2024-11-05 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121965\n",
+      "PPI: 2097-3530-04-005\n",
+      "MOD Date: 2024-11-05 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121966\n",
+      "PPI: 2097-3530-04-008\n",
+      "MOD Date: 2024-11-05 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121967\n",
+      "PPI: 2097-3530-04-010\n",
+      "MOD Date: 2024-11-05 17:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 10858\n",
+      "PPI: 2097-3530-13-011\n",
+      "MOD Date: 2024-11-04 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 121960\n",
+      "PPI: 2097-3530-13-010\n",
+      "MOD Date: 2024-11-04 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 121961\n",
+      "PPI: 2097-3530-13-008\n",
+      "MOD Date: 2024-11-04 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 121962\n",
+      "PPI: 2097-3530-13-009\n",
+      "MOD Date: 2024-11-04 17:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 115364\n",
+      "PPI: 2209-3010-32-016\n",
+      "MOD Date: 2024-10-30 18:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 121959\n",
+      "PPI: 2209-3010-32-017\n",
+      "MOD Date: 2024-10-30 18:00:00\n",
+      "MOD Type: 2\n",
+      "\n",
+      "Object ID: 6811\n",
+      "PPI: 2093-1922-08-010\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 120826\n",
+      "PPI: 2093-1920-04-033\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121927\n",
+      "PPI: 2093-1922-08-009\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121928\n",
+      "PPI: 2093-1922-08-008\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121929\n",
+      "PPI: 2093-1922-08-007\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121930\n",
+      "PPI: 2093-1922-08-006\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121932\n",
+      "PPI: 2093-1920-04-032\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121933\n",
+      "PPI: 2093-1920-04-031\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121934\n",
+      "PPI: 2093-1920-04-034\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121935\n",
+      "PPI: 2093-1920-04-030\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121936\n",
+      "PPI: 2093-1920-04-035\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121937\n",
+      "PPI: 2093-1920-04-029\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121938\n",
+      "PPI: 2093-1920-04-036\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121939\n",
+      "PPI: 2093-1920-04-037\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121940\n",
+      "PPI: 2093-1920-04-038\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121941\n",
+      "PPI: 2093-1920-04-040\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121942\n",
+      "PPI: 2093-1920-04-028\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121943\n",
+      "PPI: 2093-1920-04-041\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121944\n",
+      "PPI: 2093-1920-04-039\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121945\n",
+      "PPI: 2093-1920-04-027\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121946\n",
+      "PPI: 2093-1920-04-042\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121947\n",
+      "PPI: 2093-1920-04-024\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121948\n",
+      "PPI: 2093-1920-04-023\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121949\n",
+      "PPI: 2093-1920-04-026\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121950\n",
+      "PPI: 2093-1920-04-025\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121951\n",
+      "PPI: 2093-1920-04-022\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n",
+      "Object ID: 121952\n",
+      "PPI: 2093-1920-04-021\n",
+      "MOD Date: 2024-10-23 18:00:00\n",
+      "MOD Type: 1\n",
+      "\n"
      ]
     }
    ],
@@ -861,24 +1357,31 @@
     "import requests\n",
     "from datetime import datetime\n",
     "\n",
-    "# Query URL for the 5 most recent parcels\n",
-    "query_url = \"https://gis.summitcountyco.gov/arcgis/rest/services/ParcelQueryTool/SummitMap1_Pro321/MapServer/19/query?where=1=1&orderByFields=MODDATE%20DESC&resultRecordCount=5&outFields=*&returnGeometry=false&f=json\"\n",
+    "num_results = 100\n",
+    "\n",
+    "# Query URL with adjustable result count\n",
+    "query_url = f\"https://gis.summitcountyco.gov/arcgis/rest/services/ParcelQueryTool/SummitMap1_Pro321/MapServer/19/query?where=SOURCE=1&orderByFields=MODDATE%20DESC&resultRecordCount={num_results}&outFields=*&returnGeometry=false&f=json\"\n",
     "\n",
     "# Send the request\n",
     "response = requests.get(query_url)\n",
     "if response.status_code == 200:\n",
     "    data = response.json()\n",
     "    features = data.get(\"features\", [])\n",
-    "    print(\"Five Most Recently Modified Parcels:\")\n",
+    "    print(f\"{num_results} Most Recently Modified Parcels:\\n\")\n",
     "    for feature in features:\n",
     "        attributes = feature.get(\"attributes\", {})\n",
     "        object_id = attributes.get(\"OBJECTID\")\n",
     "        ppi = attributes.get(\"PPI\")\n",
     "        mod_date = attributes.get(\"MODDATE\")\n",
+    "        mod_type = attributes.get(\"MODTYPE\")\n",
     "        # Convert MODDATE (Unix timestamp in milliseconds) to readable date\n",
     "        if mod_date:\n",
     "            mod_date = datetime.fromtimestamp(mod_date / 1000).strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "        print(f\"Parcel ID: {object_id}, PPI: {ppi}, Last Modified: {mod_date}\")\n",
+    "        #print(f\"Parcel ID: {object_id}, PPI: {ppi}, Last Modified: {mod_date}\")\n",
+    "        print(f\"Object ID: {object_id}\")\n",
+    "        print(f\"PPI: {ppi}\")\n",
+    "        print(f\"MOD Date: {mod_date}\")\n",
+    "        print(f\"MOD Type: {mod_type}\\n\")\n",
     "else:\n",
     "    print(f\"Error: Unable to fetch data. Status code: {response.status_code}\")"
    ]
