--- a/learning_query_syntax.ipynb
+++ b/learning_query_syntax.ipynb
@@ -1351,6 +1351,192 @@
     "except Exception as e:\n",
     "    print(f\"Unexpected error: {e}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ec38f8f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total Features Retrieved: 2000\n",
+      "\n",
+      "Data saved to 'selected_fields_data.json'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# Define the ArcGIS REST API endpoint for the Schedule text layer (ID: 12)\n",
+    "url = \"https://gis.summitcountyco.gov/arcgis/rest/services/ParcelQueryTool/SummitMap1_Pro321/MapServer/12/query\"\n",
+    "\n",
+    "# Define the list of fields to query\n",
+    "fields = [\n",
+    "    \"OBJECTID\", \"PPI\", \"EcoDesc\", \"SubName\", \"Filing\", \"ShortDesc\", \"HouseNum\",\n",
+    "    \"FullStreet\", \"StreetName\", \"TownCode\", \"TownName\", \"OwnerAdd1\", \"OwnerAdd2\",\n",
+    "    \"OwnerCity\", \"OwnerState\", \"PostCode\", \"FullAdd\", \"TotAcres\", \"TotSqFt\",\n",
+    "    \"MiscChar\", \"MiscCharID\", \"NumUnits\", \"YearBuilt\", \"SquareFeet\", \"SqeFtLiving\",\n",
+    "    \"Unfinished\", \"BsmtType\", \"GarageType\", \"NumOfCars\", \"GarSqFt\", \"NumOfRms\",\n",
+    "    \"NumBedRms\", \"NumLofts\", \"NumKitch\", \"MasterBath\", \"FullBath\", \"TqtrBaths\",\n",
+    "    \"HalfBaths\", \"QtrBaths\", \"TotBath\", \"MobHtitle\", \"FloorLevel\"\n",
+    "]\n",
+    "\n",
+    "# Define query parameters\n",
+    "params = {\n",
+    "    \"where\": \"1=1\",  # Return all records\n",
+    "    \"outFields\": \",\".join(fields),  # Retrieve only specified fields\n",
+    "    \"f\": \"json\",  # Output format as JSON\n",
+    "    \"returnGeometry\": \"false\",  # Exclude geometry data to reduce response size\n",
+    "    \"outSR\": \"102654\"  # Spatial reference to match layer's SRID (2232)\n",
+    "}\n",
+    "\n",
+    "try:\n",
+    "    # Send GET request to the ArcGIS REST API\n",
+    "    response = requests.get(url, params=params)\n",
+    "    \n",
+    "    # Check if the request was successful\n",
+    "    response.raise_for_status()\n",
+    "    \n",
+    "    # Parse the JSON response\n",
+    "    data = response.json()\n",
+    "    \n",
+    "    # Check if the response contains features\n",
+    "    if \"features\" in data and len(data[\"features\"]) > 0: \n",
+    "        print(f\"\\nTotal Features Retrieved: {len(data['features'])}\")\n",
+    "        \n",
+    "        # Save the full response to a file for further inspection\n",
+    "        with open(\"selected_fields_data.json\", \"w\") as f:\n",
+    "            json.dump(data, f, indent=2)\n",
+    "        print(\"\\nData saved to 'selected_fields_data.json'\")\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"No features found in the response.\")\n",
+    "        \n",
+    "except requests.exceptions.RequestException as e:\n",
+    "    print(f\"Error querying the ArcGIS service: {e}\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error parsing JSON response: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Unexpected error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c875de30",
+   "metadata": {},
+   "source": [
+    "# Retrieve all Current Data for Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2a250f66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Unique PPIs: 21031\n",
+      "Data saved to 'schedule_fields_data.json'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# Define the ArcGIS REST API endpoint for the Schedule text layer (ID: 12)\n",
+    "url = \"https://gis.summitcountyco.gov/arcgis/rest/services/ParcelQueryTool/SummitMap1_Pro321/MapServer/12/query\"\n",
+    "\n",
+    "# Define the list of fields to query\n",
+    "fields = [\n",
+    "    \"OBJECTID\", \"PPI\", \"EcoDesc\", \"SubName\", \"Filing\", \"ShortDesc\", \"HouseNum\",\n",
+    "    \"FullStreet\", \"StreetName\", \"TownCode\", \"TownName\", \"OwnerAdd1\", \"OwnerAdd2\",\n",
+    "    \"OwnerCity\", \"OwnerState\", \"PostCode\", \"FullAdd\", \"TotAcres\", \"TotSqFt\",\n",
+    "    \"MiscChar\", \"MiscCharID\", \"NumUnits\", \"YearBuilt\", \"SquareFeet\", \"SqeFtLiving\",\n",
+    "    \"Unfinished\", \"BsmtType\", \"GarageType\", \"NumOfCars\", \"GarSqFt\", \"NumOfRms\",\n",
+    "    \"NumBedRms\", \"NumLofts\", \"NumKitch\", \"MasterBath\", \"FullBath\", \"TqtrBaths\",\n",
+    "    \"HalfBaths\", \"QtrBaths\", \"TotBath\", \"MobHtitle\", \"FloorLevel\"\n",
+    "]\n",
+    "\n",
+    "# Initialize variables for pagination\n",
+    "all_features = []\n",
+    "batch_size = 1000  # Match MaxRecordCount\n",
+    "offset = 0\n",
+    "params = {\n",
+    "    \"where\": \"1=1\",  # Return all records\n",
+    "    \"outFields\": \",\".join(fields),  # Retrieve specified fields\n",
+    "    \"f\": \"json\",  # Output format as JSON\n",
+    "    \"returnGeometry\": \"false\",  # Exclude geometry\n",
+    "    \"outSR\": \"102654\",  # Spatial reference\n",
+    "    \"resultRecordCount\": batch_size  # Number of records per request\n",
+    "}\n",
+    "\n",
+    "try:\n",
+    "    while True:\n",
+    "        # Update offset for pagination\n",
+    "        params[\"resultOffset\"] = offset\n",
+    "        \n",
+    "        # Send GET request\n",
+    "        response = requests.get(url, params=params)\n",
+    "        response.raise_for_status()\n",
+    "        \n",
+    "        # Parse JSON response\n",
+    "        data = response.json()\n",
+    "        \n",
+    "        # Check for features\n",
+    "        if \"features\" not in data or not data[\"features\"]:\n",
+    "            break\n",
+    "            \n",
+    "        # Add features to collection\n",
+    "        all_features.extend(data[\"features\"])\n",
+    "        \n",
+    "        # Check if more records exist\n",
+    "        if len(data[\"features\"]) < batch_size:\n",
+    "            break\n",
+    "            \n",
+    "        # Increment offset\n",
+    "        offset += batch_size\n",
+    "    \n",
+    "    # Save all features to JSON file\n",
+    "    if all_features:\n",
+    "        output_data = {\n",
+    "            \"displayFieldName\": data.get(\"displayFieldName\", \"\"),\n",
+    "            \"fieldAliases\": data.get(\"fieldAliases\", {}),\n",
+    "            \"fields\": data.get(\"fields\", []),\n",
+    "            \"features\": all_features\n",
+    "        }\n",
+    "        \n",
+    "        # Extract unique PPIs\n",
+    "        total_ppis = set()\n",
+    "        for feature in all_features:\n",
+    "            ppi = feature.get(\"attributes\", {}).get(\"PPI\")\n",
+    "            if ppi is not None:\n",
+    "                total_ppis.add(ppi)\n",
+    "        \n",
+    "        print(f\"Total Unique PPIs: {len(total_ppis)}\")\n",
+    "        \n",
+    "        with open(\"schedule_fields_data.json\", \"w\") as f:\n",
+    "            json.dump(output_data, f, indent=2)\n",
+    "        print(\"Data saved to 'schedule_fields_data.json'\")\n",
+    "    else:\n",
+    "        print(\"No features found in the response.\")\n",
+    "        \n",
+    "except requests.exceptions.RequestException as e:\n",
+    "    print(f\"Error querying the ArcGIS service: {e}\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error parsing JSON response: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Unexpected error: {e}\")"
+   ]
   }
  ],
  "metadata": {
