Structuring for web scrape

--- a/integrating_everything.ipynb
+++ b/integrating_everything.ipynb
@@ -1967,6 +1967,41 @@
    "source": [
     "# Parsing Through the JSON Results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b5b9e0e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=4008327\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=3000334\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=3001794\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=3000256\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6518943\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For the first matching record:\n",
+    "schedule_value = json_results[0]['Schedule ID Attributes']['Schedule']\n",
+    "\n",
+    "# To loop through all records and access Schedule:\n",
+    "for record in json_results:\n",
+    "    schedule = record['Schedule ID Attributes']['Schedule']\n",
+    "\n",
+    "# To get all Schedule values as a list:\n",
+    "schedules = [record['Schedule ID Attributes']['Schedule'] for record in json_results]\n",
+    "\n",
+    "for id in schedules:\n",
+    "    scrape_url = f'https://gis.summitcountyco.gov/map/DetailData.aspx?Schno={id}'\n",
+    "    requests.get(scrape_url)\n",
+    "    print(scrape_url)"
+   ]
   }
  ],
  "metadata": {
